feat: optimize json array partial matcher for big json file